# SequenceMatcher

./: CMakeLists.txt
examples/: main.cpp
include/: SequenceMatcher.h
src/: SequenceMatcher.cpp
